dnl Process this file with autoconf to produce a configure script.

AC_INIT(msearch.cc)
AM_INIT_AUTOMAKE(xapian-examples, 0.4.1-cvs)
AM_CONFIG_HEADER(config.h)

dnl Add parameters for aclocal
dnl (This must come after AM_INIT_AUTOMAKE, since it modifies ACLOCAL)
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Use libtool to manage our libraries
AM_PROG_LIBTOOL

dnl Check for libxapian
OM_PATH_XAPIAN(, AC_MSG_ERROR([Can't find Xapian library]))

dnl ******************************
dnl * Set special compiler flags *
dnl ******************************

dnl extra flags for building with gcc
if test "$GCC" = yes; then
  AM_CFLAGS="$AM_CFLAGS -Wall -Wunused -Wno-long-long"
  AM_CXXFLAGS="$AM_CXXFLAGS -Wall -Wunused -Wno-long-long -fno-gnu-keywords"
fi

dnl modify flags for building with stlport
if test "x$use_stlport" = "xyes"; then
  if test "$GCC" = yes; then
    AM_CXXFLAGS="-nostdinc++ $AM_CXXFLAGS"
  fi
  AM_CXXFLAGS="$STLPORT_INCLUDE $AM_CXXFLAGS"
  LIBS="$STLPORT_LIBS $LIBS"
fi

dnl **************************
dnl * Build the output files *
dnl **************************

AC_OUTPUT(Makefile)
